--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
